# maas

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
hack/: Dockerfile
src/: .env.example  main.py
src/chat/: README.md  __init__.py  config.py
src/chat/api/: router.py
src/chat/application/: chat_service.py  schemas.py
src/chat/domain/: __init__.py
src/chat/domain/models/: chat.py  enums.py
src/chat/domain/repositories/: chat_repository.py
src/chat/domain/services/: chat_service.py  llm_service.py
src/chat/infrastructure/: models.py  repositories.py
src/common/: errors.py  exceptions.py  middleware.py  response.py
src/config/: config.yaml  config.yaml.example  loader.py  logger.py  settings.py
src/infra/: database.py
src/mcp_server/: README.md  __init__.py
src/mcp_server/api/: router.py
src/mcp_server/application/schemas/: mcp_schemas.py
src/mcp_server/domain/models/: tool.py
src/mcp_server/infra/: models.py  repositories.py
src/rag/: __init__.py
src/rag/api/: routes.py
src/rag/application/: schemas.py  services.py
src/rag/domain/: entities.py  repositories.py  services.py
src/rag/infra/: config.py  database.py  embedding.py  models.py  vector_store.py  vector_store_service.py
src/user/: __init__.py
src/user/api/: router.py
src/user/application/: __init__.py  schemas.py  services.py
src/user/domain/: entities.py  repositories.py  services.py  value_objects.py
src/user/infra/: models.py  repositories.py
src/utils/: auth_util.py
tests/: client.py  test_milvus.py
(+7 files in other folders)
