[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.115.12",
    "fastmcp>=2.3.5",
    "langgraph>=0.4.5",
    "litellm>=1.70.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pymilvus>=2.5.9",
    "python-jose>=3.4.0",
    "sentry-sdk[fastapi]>=2.29.1",
    "sqlalchemy[aiomysql]>=2.0.41",
    "ujson>=5.10.0",
    "uvicorn>=0.34.2",
    "uvloop>=0.21.0",
]
